--- a/coursework.html
+++ b/coursework.html
@@ -169,6 +169,10 @@
                     phone: '',
                    
                 },
+                created:fetch("https://webcoursework2.herokuapp.com/collection/Lesson", requestOptions)
+  .then(response => response.json())
+  .then(result => console.log(result))
+  .catch(error => console.log('error', error));
 
             },
             methods: {
