--- a/coursework.html
+++ b/coursework.html
@@ -169,10 +169,13 @@
                     phone: '',
                    
                 },
-                created:fetch("https://webcoursework2.herokuapp.com/collection/Lesson", requestOptions)
-  .then(response => response.json())
-  .then(result => console.log(result))
-  .catch(error => console.log('error', error));
+                created: function () {
+                    console.log("collecting lessons from database....")
+                    fetch("https://webcoursework2.herokuapp.com/collection/Lesson").then(
+                        function(res) {
+                            res.json().then(
+                                function(json) {
+                                    app.lessons = jsons;
 
             },
             methods: {
@@ -323,7 +326,38 @@
                     }
 
                 },
-                canAddToCart(product) {
+                    fetch('https://webcoursework2.herokuapp.com/collection/Order",{
+                          method:post",
+                          body:json.stringiry(checkoutData),
+                        headers:{
+                            'content-type': 'application/json',
+                        }
+                        }).then((data) =>{
+                        data.json().then((response)=>
+                                         console.log(response)
+                                         })
+                    }0.catch((err) =>{
+                        console.log(err)
+                    })
+                    app.Lesson.foreachLesson => {
+                        if (Lesson.availableInventory !-0) Lesson.availableInventory - this.cartcount(Lesson.id)
+                    })
+                },
+                //this mehod update the lessons available spaces
+                updateAvailability(id, quantity) {
+                    fetch("https://webcoursework2.herokuapp.com/collection/Lesson + id, {
+                          method: 'put',
+                          headers: { 'content-type' : ;application/json' },
+                          body: json.stringify(
+                          {
+                            "availableSpaces":quantity
+                          }
+            }
+        }).then(response => response.json())
+        .then(data => { return data }).catch(err => { return data});
+        }
+        }
+                        canAddToCart(product) {
                     return product.availableInventory > this.cartCount(product.id);
                 },
                 cartCount(id) {
