--- a/coursework.html
+++ b/coursework.html
@@ -378,7 +378,7 @@
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify({ Name: this.order.name, Phone: this.order.phone, ProductsInOrder: this.cart.map(({ subject }) => subject) })}).then(function () {
+                        body: JSON.stringify({ Name: this.order.firstName, Phone: this.order.phone, ProductsInOrder: this.cart.map(({ subject }) => subject) })}).then(function () {
                         }   
                         )},                     
 
